Revert "Fix layout issues for tags"
This reverts commit 9e661fabbac8a283092ddaa565890ba5647a0850.

--- a/rocky/assets/css/themes/soft/manon/tags.scss
+++ b/rocky/assets/css/themes/soft/manon/tags.scss
@@ -14,6 +14,9 @@ ul {
     padding: 0;
 
     li {
+      border: none;
+      padding: 0;
+
       label {
         margin-right: 0.5rem;
       }
