--- a/rocky/assets/css/vendor_overrides/manon/tile.scss
+++ b/rocky/assets/css/vendor_overrides/manon/tile.scss
@@ -15,10 +15,6 @@ $boefje-plugin-type-label: #5b4f90;
   }
 }
 
-.tiles > div ul {
-  padding-left: 0;
-}
-
 .tile,
 .tiles,
 ul.tiles {
